estilização no base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,28 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
     <link rel="stylesheet" href="{% static 'stick-footer.css' %}" >
 
+
+ <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            
+
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    <nav class="cyan darken-4">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Alugo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a class="grey-text text-lighten-4 right" href="#">Contato</a></li>
+        <li><a class="grey-text text-lighten-4 right" href="#">Sobre nós</a></li>
+        <li><a class="grey-text text-lighten-4 right" href="#">Termos de Uso</a></li>
+      </ul>
+    </div>
+  </nav>
+
     <div class="container">
         <div class="jumbotron">
           {% block main %}
@@ -20,5 +39,31 @@
     {% endblock %}
 
 
+<footer class="page-footer cyan darken-4">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Alugo</h5>
+                <p class="grey-text text-lighten-4">Com o Alugo, você pode alugar os seus produtos preferidos.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Redes Sociais</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Twitter</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Linkedin</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
+            
 </body>
 </html>
