--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -16,10 +16,10 @@
         </div>
         <div class="col-sm">
             {% if user.is_authenticated %}
-                 <a href="{% url 'list_products' %}" > Produtos </a>
                  <a href="{% url 'logout' %}"> Sair </a>
             {% else %}
                  <a href="{% url 'login' %}" class="btn btn-info"> Entrar </a>
+                 <a href="{% url 'cadastro' %}" class="btn btn-info"> Cadastrar-se </a>
             {% endif %}
 
         </div>
