--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -18,8 +18,10 @@
             {% if user.is_authenticated %}
                  <a href="{% url 'logout' %}"> Sair </a>
             {% else %}
-                 <a href="{% url 'login' %}" class="btn btn-info"> Entrar </a>
-                 <a href="{% url 'cadastro' %}" class="btn btn-info"> Cadastrar-se </a>
+                <div class="row">
+                    <a href="{% url 'login' %}" class="btn btn-info"> Entrar </a>
+                    <a href="{% url 'cadastro' %}" class="btn btn-info"> Cadastro </a>
+                </div>
             {% endif %}
 
         </div>
