--- a/templates/products/products-form.html
+++ b/templates/products/products-form.html
@@ -10,7 +10,7 @@
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|bootstrap }}
-        <button type="submit" class="btn btn-primary"> Salvar </button>
+        <button type="submit" class="btn btn-secondary"> Salvar </button>
 
     </form>
 {% endblock %}
