--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form|bootstrap }}
-        <button type="submit" class="btn btn-info"> Login </button>
+        <button type="submit" class="btn btn-secondary"> Login </button>
 
     </form>
 {% endblock %}
