--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -10,7 +10,7 @@
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|bootstrap }}
-        <button type="submit" class="btn btn-primary"> Registrar </button>
+        <button type="submit" class="btn btn-secondary"> Registrar </button>
 
     </form>
 {% endblock %}
