--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -4,9 +4,38 @@
 
 {% block main %}
 
-<h1> Bem vindo! </h1>
+    <div class="row">
+        <div class="col-sm">
+
+        </div>
+        <div class="col-8">
+          <h1> Seja bem vindo!</h1>
+            {% if user.is_authenticated %}
+                 <a href="{% url 'list_products' %}" class="btn btn-primary"> Meus Produtos </a>
+            {% endif %}
+        </div>
+        <div class="col-sm">
+            {% if user.is_authenticated %}
+                 <a href="{% url 'logout' %}"> Sair </a>
+            {% else %}
+                <div class="row">
+                    <a href="{% url 'login' %}" class="btn btn-info"> Entrar </a>
+                    <a href="{% url 'cadastro' %}" class="btn btn-info"> Cadastro </a>
+                </div>
+            {% endif %}
+
+        </div>
+    </div>
 
 {% endblock %}
 
+{% block footer %}
+  <footer class="footer">
+            <div class="container">
+            <span class="text-muted">@Alugo</span>
+            </div>
+  </footer>
+
+{% endblock %}
 
 
