--- a/templates/products/products-alter-form.html
+++ b/templates/products/products-alter-form.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         {{ form|bootstrap }}
         <button type="submit" class="btn btn-secondary"> Salvar </button>
-        <a href="{% url 'list_products' user.id %}" class="btn btn-secondary"> Voltar</a>
+        <a href="{% url 'detail_product' product.id %}" class="btn btn-secondary"> Voltar </a>
 
     </form>
 {% endblock %}
