filtro de busca por descricao

--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -8,7 +8,15 @@
         <div>
 
         </div>
-
+    <div class="col-lg-3 mx-auto">
+            <div class="list-group">
+                
+                <form method="GET">
+                    {{ filtro.form }}
+                    <input class="btn btn-secondary" type="submit" value="Pesquisar">
+                    </form>
+            </div>
+        </div>
         <div class="col-12">
             <h3> Listagem de Produtos </h3>
             <ul class="list-group">
