paginação, detalhes do meu produto e lista de todos os produtos

--- a/templates/products/my-products.html
+++ b/templates/products/my-products.html
@@ -18,13 +18,13 @@
             </div>
         </div>
         <div class="col-12">
-            <h3> Listagem de Produtos </h3>
+            <h3> Meus Produtos </h3>
             <ul class="list-group">
             {% for product in products %}
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-7">
-                           <a href="{% url 'detail_product' product.id %}"> <p> {{ product.nome }} </p> </a>
+                           <a href="{% url 'my_detail_product' product.id %}"> <p> {{ product.nome }} </p> </a>
                             <image src="{{ product.imagem.url }}" width="150" height="100" > </image>
                         </div>
 
