--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
         <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
             <li class="nav-item">
+                <a href="{% url 'lista_products' %}" class="nav-link"> Produtos </a>
+              </li>
+            <li class="nav-item">
                 <a href="{% url 'list_products' user.id %}" class="nav-link"> Meus Produtos </a>
 
               </li>
