--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,10 @@
                 <a href="{% url 'list_products' user.id %}" class="nav-link"> Meus Produtos </a>
 
               </li>
+            <li class="nav-item">
+                <a href="{% url 'perfil' user.id %}" class="nav-link"> Meu Perfil </a>
+
+              </li>
               <li class="nav-item">
                   <a class="nav-link" href="{% url 'logout' %}">Sair</a>
               </li>
