--- a/templates/user/perfil.html
+++ b/templates/user/perfil.html
@@ -9,7 +9,9 @@
 <br>
 <div class="container">   
     
-    <p>Preencha seu Endereço</p>
+<h3> Meu Perfil </h3>
+
+     <image src="{{ perfil.get_photo_url }}" class="img-thumbnail fotoPerfil"> </image>
 
        <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
