--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
     <link rel="stylesheet" href="{% static 'css/style.css' %}" >
 
@@ -26,6 +29,11 @@
             <li class="nav-item">
                 <a href="{% url 'lista_products' %}" class="nav-link"> Produtos </a>
               </li>
+
+               <li class="nav-item">
+                <a href="{% url 'products_favourite_list' %}" class="nav-link"> Favoritos </a>
+              </li>
+
             <li class="nav-item">
                 <a href="{% url 'list_products' user.id %}" class="nav-link"> Meus Produtos </a>
 
