--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,6 +11,8 @@
         <button type="submit" class="btn btn-secondary"> Login </button>
 
     </form>
+   
+   <a href="{% url 'password_reset' %}"> Esqueci a senha </a>
 {% endblock %}
 
 {% block footer %}
