--- a/templates/user/perfil.html
+++ b/templates/user/perfil.html
@@ -7,26 +7,28 @@
 {% block main %}
 <body>
 <br>
-<div class="container">   
+<div class="container">
+
+    <div>
+        {% for message in messages %}
+               <div class="alert alert-success alert-dismissible fade show" role="alert">
+                   {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+               {% endfor %}
+    </div>
     
 <h3> Meu Perfil </h3>
 
      <image src="{{ perfil.get_photo_url }}" class="img-thumbnail fotoPerfil"> </image>
 
-    <div>
-        {% for message in messages %}
-               <div class="alert alert-danger">
-                   <strong> Error! </strong> {{ message }}
-
-               </div>
-
-               {% endfor %}
-    </div>
-
        <form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-   {{ form|bootstrap }}
-   <button type="submit" class="btn btn-secondary"> Salvar </button>
+            {% csrf_token %}
+            {{ form|bootstrap }}
+   <button type="submit" id="btnSalvar" class="btn btn-secondary"> Salvar </button>
          </form>
     </div>
     
