alterações no chat

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -10,7 +10,7 @@
     <input id="submit" type="button" value="Enviar" >
 
 
-{{user}}
+<output id="identificador"> {{ identificador }} </output>
 
 {{ room_name|json_script:"room-name" }}
 {{ request.user.name|json_script:"user_username" }}
