--- a/templates/products/my-products.html
+++ b/templates/products/my-products.html
@@ -19,6 +19,18 @@
         </div>
         <div class="col-12">
             <h3> Meus Produtos </h3>
+        <div>
+            {% for message in messages %}
+                   <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                   </div>
+
+            {% endfor %}
+        </div>
+
             <ul class="list-group">
             {% for product in products %}
                 <li class="list-group-item">
