--- a/templates/products/products-detail.html
+++ b/templates/products/products-detail.html
@@ -36,7 +36,7 @@
 <p> Condições de Uso : {{ product.condicoesUso }} </p>
 
    <a type="button"class="btn btn-secondary"
-	  href="{% url 'criarSala' idLocatario=product.user.id idLocador=user.id idProduto=product.id %}">
+	  href="{% url 'criarSala' idLocatario=product.user.id idLocador=user.id %}">
 	   Chat
     </a>
     
