--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,24 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <!-- CSS only -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" >
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
-    <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+  <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-   <!-- Navigation -->
+
+<body class="bg-light">
+  <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}">Alugo</a>
@@ -25,65 +29,68 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-                <a href="{% url 'meusChats' %}" class="nav-link"> Meus Chats </a>
-              </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a href="{% url 'meusChats' %}" class="nav-link"> Meus Chats </a>
+          </li>
 
-            <li class="nav-item">
-                <a href="{% url 'lista_products' %}" class="nav-link"> Produtos </a>
-              </li>
+          <li class="nav-item">
+            <a href="{% url 'lista_products' %}" class="nav-link"> Produtos </a>
+          </li>
 
-               <li class="nav-item">
-                <a href="{% url 'products_favourite_list' %}" class="nav-link"> Favoritos </a>
-              </li>
+          <li class="nav-item">
+            <a href="{% url 'products_favourite_list' %}" class="nav-link"> Favoritos </a>
+          </li>
 
-            <li class="nav-item">
-                <a href="{% url 'list_products' user.id %}" class="nav-link"> Meus Produtos </a>
+          <li class="nav-item">
+            <a href="{% url 'list_products' user.id %}" class="nav-link"> Meus Produtos </a>
 
-              </li>
-            <li class="nav-item">
-                <a href="{% url 'perfil' user.id %}" class="nav-link"> Meu Perfil </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'perfil' user.id %}" class="nav-link"> Meu Perfil </a>
 
-              </li>
-            <li class="nav-item">
-                <a href="{% url 'excluirConta' user.id %}" class="nav-link"> Excluir Conta </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'excluirConta' user.id %}" class="nav-link"> Excluir Conta </a>
 
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="{% url 'logout' %}">Sair</a>
-              </li>
-            {% else %}
-                <li class="nav-item">
-                      <a href="{% url 'login' %}" class="nav-link"> Entrar </a>
-                </li>
-                 <li class="nav-item">
-                      <a href="{% url 'cadastro' %}" class="nav-link"> Cadastro </a>
-                 </li>
-            {% endif %}
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Sair</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a href="{% url 'login' %}" class="nav-link"> Entrar </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'cadastro' %}" class="nav-link"> Cadastro </a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
   </nav>
 
-    <div class="container">
-        <div class="jumbotron">
-          {% block main %}
-          {% endblock %}
-        </div>
-    </div>
+  {% block main %}
+  {% endblock %}
 
 
-<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">Alugo</a>
-      </button>
-    </nav>
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="{% static 'js/jquery-1.2.6.pack.js' %}" ></script>
-        <script type="text/javascript" src="{% static 'js/jquery.maskedinput-1.1.4.pack.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+  <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark justify-content-center">
+    <a class="navbar-brand" href="{% url 'home' %}">Alugo</a>
+  </nav>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
+  <script type="text/javascript" src="{% static 'js/jquery-1.2.6.pack.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/jquery.maskedinput-1.1.4.pack.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
 </body>
+
 </html>
