Fucionalidade de denunciar produto

--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -28,6 +28,7 @@
                         <div class="col-7">
                            <a href="{% url 'detail_product' product.id %}"> <p> {{ product.nome }} </p> </a>
                             <image src="{{ product.get_photo_url }}" width="150" height="100" > </image>
+                             <a class="btn btn-secondary" href="{% url 'denuncia' product.id %}"> Denunciar </a>
                         </div>
 
                     </div>
