--- a/templates/user/perfil.html
+++ b/templates/user/perfil.html
@@ -11,6 +11,7 @@
     <div class="container" style="margin-top: 51px; margin-bottom: 70px;">
 
         <div>
+            {% if alterar != None %}
             {% for message in messages %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
                 {{ message }}
@@ -20,6 +21,21 @@
             </div>
 
             {% endfor %}
+            {% endif %}
+        </div>
+
+             <div>
+            {% if excluir != None %}
+            {% for message in messages %}
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            {% endfor %}
+            {% endif %}
         </div>
 
         <section class="container box-shadow">
@@ -82,13 +98,6 @@
                                 <input type="password" id="senha" name="senha" />
 
                                 <div class="mt-3">
-                                    {% for message in messages %}
-                                    <div class="alert alert-danger">
-                                        <strong> Error! </strong> {{ message }}
-
-                                    </div>
-
-                                    {% endfor %}
 
                                     <div class="col-12 mt-4">
                                         <button type="submit" class="btn btn-danger botao-redondo btn-block py-2">Excluir Conta</button>
