--- a/templates/base_rodape_fixo.html
+++ b/templates/base_rodape_fixo.html
@@ -84,7 +84,7 @@
 
 
 
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark justify-content-center mt-5">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark justify-content-center mt-5 fixed-bottom">
     <a class="navbar-brand" href="{% url 'home' %}">Alugo</a>
   </nav>
 
