--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,4 +1,4 @@
-{%  extends 'base.html'%}
+{%  extends 'base_rodape_fixo.html'%}
 {% load static %}
 
 {%  load bootstrap %}
@@ -8,7 +8,7 @@
 {% block main %}
 
 <body class="bg-light">
-    <section class="container inicio">
+    <section class="container login-cadastro-espacamento">
         <div class="row justify-content-center" style="color: rgb(74, 74, 74); font-weight: bold;">
             <div class="col-12 col-lg-6 bg-white px-5 pt-4 pb-5 box-shadow" style="border-radius: 40px;">
                 <div class="text-center">
