--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,10 +1,9 @@
 {%  extends 'base.html'%}
-
+{% load static %}
+{% load bootstrap %}
 {% block title %} Seja bem vindo {% endblock %}
 
 {% block main %}
-
-<h1> Bem vindo! </h1>
 
 <div>
     {% for message in messages %}
@@ -13,5 +12,39 @@
     </div>
     {% endfor %}
 </div>
+
+<section id="section-home-pesquisar" class="container-fluid bg-light pt-4 pb-1">
+    <div class="container">
+        <form method="GET">
+            {{ filtro.form|bootstrap}}
+            <span class="input-group-append">
+                <button type="submit" class="btn btn-primary py-0 px-3">
+                    <img src="{% static 'images/icone-lupa.png' %}" style="width: 40px;" alt="icone lupa">
+                </button>
+            </span>
+
+        </form>
+</section>
+
+<section class="container mt-5">
+    <h4>Anúncios Recentes</h4>
+    <div class="row p-md-5 py-4 pl-3">
+
+        {% for product in products %}
+        <div class="col-md-3 col-6 mb-4 aumentar-tamanho-mouse">
+            <a href="{% url 'detail_product' product.id %}">
+                <image src="{{ product.get_photo_url }}" class="rounded tamanho-fixo-imagens"> </image>
+                <p class="mt-2 mb-1 ml-1">{{ product.nome }}</p>
+                <p class="m-0 ml-1" style="font-size: 20px;"><strong>R$ {{ product.preco }}</strong></p>
+            </a>
+        </div>
+        {% endfor %}
+    </div>
+    </div>
+</section>
+
+<script type="text/javascript">
+    document.getElementById("id_nome").placeholder = 'Estou procurando por...';
+</script>
 
 {% endblock %}
