--- a/templates/user/perfil.html
+++ b/templates/user/perfil.html
@@ -8,7 +8,7 @@
 
 <body>
     <br>
-    <div class="container" style="margin-top: 51px; margin-bottom: 70px;">
+    <div class="container">
 
         <div>
             {% for message in messages %}
@@ -35,8 +35,7 @@
                     <image src="{{ perfil.get_photo_url }}" class="img-thumbnail fotoPerfil"> </image>
                 </div>
 
-                <div class="bg-white p-5 col-12 col-lg-7 mb-5"
-                    style="border-radius: 20px; color: rgb(74, 74, 74); font-weight: bold;">
+                <div class="bg-white p-5 col-12 col-lg-7 mb-5 texto-campo">
                     <div>
                         <h3 class="h4">Dados da Conta</h3>
                     </div>
@@ -79,7 +78,9 @@
                             <form method="POST" action="submit" enctype="multipart/form-data">
                                 {% csrf_token %}
 
-                                <input type="password" id="senha" name="senha" />
+                                <div class="col-12">
+                                        <input type="password" id="senha" name="senha" class="form-control" />
+                                </div>
 
                                 <div class="mt-3">
                                     {% for message in messages %}
@@ -91,7 +92,8 @@
                                     {% endfor %}
 
                                     <div class="col-12 mt-4">
-                                        <button type="submit" class="btn btn-danger botao-redondo btn-block py-2">Excluir Conta</button>
+                                        <button type="submit"
+                                            class="btn btn-danger botao-redondo btn-block py-2">Excluir Conta</button>
                                     </div>
                                 </div>
 
