--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -11,6 +11,9 @@
 
         {% csrf_token %}
 
+        <br/>
+
+
         <textarea id="chat-text" readonly="readonly" cols="80" rows="30">{{ mensagems }}</textarea>
 
         <br>
@@ -19,10 +22,23 @@
         <button type="submit" id="submit">Enviar</button>
         <output id="identificador"> {{ identificador }} </output>
 
+
+        {% for product in products %}
+                <p> {{ product.nome }} </p>
+                <image src="{{ product.get_photo_url }}" width="150" height="100" />
+                <a type="button"class="btn btn-secondary"
+	            href="">
+	             Alugar
+                </a>
+
+        {% endfor %}
+
         </form>
 
 {{ room_name|json_script:"room-name" }}
 {{ request.user.name|json_script:"user_username" }}
+
+
 
 
 <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
