--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,23 @@
           </li>
 
           <li class="nav-item">
+
+              <a href="{% url 'show_notifications' %}" class="navbar-item">
+        <i class="material-icons">notifications</i>
+        Notifications
+        {% if count_notifications %}          
+          <i class="far fa-bell" style="color:red;"></i>
+            {% else %}
+          <i class="far fa-bell"></i>
+               
+           <span class="badge">{{ count_notifications }}</span>
+        {% endif %}
+      </a>
+</li>
+
+
+
+          <li class="nav-item">
             <a href="{% url 'lista_products' %}" class="nav-link"> Produtos </a>
           </li>
 
